Fixing page header bug on mobile and splitting the overrides into sub-chunks

--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -37,3 +37,8 @@
     transform: rotate(360deg);
   }
 }
+
+.permamute-list {
+  margin-left: 0.5em;
+  cursor: pointer;
+}
